1_Apache_Pod/apache-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    run: apache
  name: apache
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: apache
